various ui fixes

--- a/src/components/head/BaseHead.astro
+++ b/src/components/head/BaseHead.astro
@@ -4,7 +4,7 @@
 import { SEO } from "astro-seo";
 import "@fontsource/lato";
 import "../../styles/global.scss";
-import "../../styles/cloudinary.min.css";
+import "cloudinary-video-player/cld-video-player.min.css";
 
 // const GA_ID = import.meta.env.GA_ID;
 
