--- a/src/components/sections/ThreeColumn.astro
+++ b/src/components/sections/ThreeColumn.astro
@@ -7,34 +7,25 @@ const { cards, styles, background_image } = Astro.props;
 ---
 
 <div class="relative">
-  {
-    background_image && background_image !== undefined && (
-      <CloudinaryImg
-        src={background_image}
-        class="absolute lg:top-[40%] top-[45%] left-1/2 w-[20rem] h-[28rem] transform -translate-x-1/2 -translate-y-1/2"
-        alt="Background Image"
-        data-pagefind-meta="image[src], image_alt[alt]"
-        width={1000}
-        height={1000}
-      />
-    )
-  }
-  <div
-    class="absolute top-[11%] left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-white z-10 text-center"
-  >
-  </div>
-
   <ul
     class:list={[
-      "list-none flex flex-col lg:flex-row mx-auto p-0",
+      "list-none flex flex-col lg:flex-row mx-auto p-0 justify-center items-center z-1",
       styles?.container,
     ]}
-    style="z-index: 1;justify-content: center; align-items: center;"
   >
     {
-      cards.map(({ text, style }) => (
-        <li class:list={[styles?.card]}>
-          <p class={`text-white ${style ? style : "text-lg"}`}>{text}</p>
+      cards.map(({ text, style }, index) => (
+        <li class:list={["relative", styles?.card]}>
+          {background_image && index === 1 && (
+            <CloudinaryImg
+              src={background_image}
+              class="absolute h-[250%] w-auto top-[-100%] left-0 right-0  z-[-1] opacity-[50%]"
+              alt=""
+              width={1000}
+              height={1000}
+            />
+          )}
+          <p class={` ${style ? style : "text-lg"}`}>{text}</p>
         </li>
       ))
     }
