--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -18,7 +18,7 @@ const optimizedBackground = await getImage({
 });
 ---
 
-<BaseLayout title="Linaro | Blogs" description="A list of blogs">
+<BaseLayout title="Blog" description="A list of blogs">
   <div
     class="purple-gradient-container absolute h-[50rem] w-full z-[-1] top-[30rem]"
   >
