--- a/src/pages/events/index.astro
+++ b/src/pages/events/index.astro
@@ -16,7 +16,7 @@ const optimizedBackground = await getImage({
 });
 ---
 
-<BaseLayout title="Linaro | Events" description="A list of blogs">
+<BaseLayout title="Events" description="A list of blogs">
   <div
     class="purple-gradient-container absolute h-[50rem] w-full z-[-1] top-[30rem]"
   >
