--- a/src/layouts/NewsLayout.astro
+++ b/src/layouts/NewsLayout.astro
@@ -80,7 +80,7 @@ if (related.length > 0) {
 }
 ---
 
-<BaseLayout title={title} description={description}>
+<BaseLayout title={title + " | Newsroom"} description={description}>
   <main
     data-pagefind-body
     data-pagefind-filter={`type:${collection}`}
@@ -109,7 +109,7 @@ if (related.length > 0) {
           {`${author.first_name} ${author.last_name}`}
         </p>
       </div>
-      <p class="flex gap-4 flex-wrap">
+      <p class="flex gap-4 flex-wrap" data-pagefind-ignore>
         <span
           data-pagefind-meta={`date:${date}`}
           data-pagefind-sort={`date:${new Date(date).getTime()}`}
@@ -127,11 +127,16 @@ if (related.length > 0) {
           ))
         }
       </ul>
-      <span data-pagefind-meta="summary" class="hidden">{summary}</span>
+      <span data-pagefind-meta="summary" class="hidden" data-pagefind-ignore
+        >{summary}</span
+      >
     </section>
     <ArticleContent Content={Content} image={image} />
   </main>
-  <aside class="container mx-auto max-w-5xl px-8 xl:px-0 mb-24">
+  <aside
+    class="container mx-auto max-w-5xl px-8 xl:px-0 mb-24"
+    data-pagefind-ignore
+  >
     <h2 class="text-5xl text-linaro-yellow font-bold mb-16">Latest News</h2>
     <ul class="flex flex-wrap gap-8 justify-center">
       {relatedPosts?.map((post) => <BlogListing {...post} />)}
