--- a/src/components/nav/Dropdown.astro
+++ b/src/components/nav/Dropdown.astro
@@ -1,11 +1,10 @@
 ---
-import { DropdownItems } from "astro-navbar";
 const { title, lastItem, children } = Astro.props;
 ---
 
-<li class="border-b-2">
+<li class="">
   <menu
-    class:list={["astronav-dropdown group"]}
+    class:list={["astronav-dropdown group "]}
     aria-expanded="false"
     data-nav-group={title}
   >
@@ -18,21 +17,17 @@ const { title, lastItem, children } = Astro.props;
         <span>{title}</span>
       </button>
     </div>
-    <DropdownItems class="block">
-      <div
-        class:list={[
-          "lg:absolute w-full z-10 mt-1",
-          lastItem
-            ? "lg:right-0 origin-top-right"
-            : "lg:left-0 origin-top-left",
-        ]}
-      >
-        <div class="flex flex-col lg:flex-row">
+    <div
+      class:list={[" astronav-dropdown dropdown-toggle hidden"]}
+      aria-expanded="false"
+    >
+      <div class:list={[" lg:absolute w-full z-10 mt-1 lg:left-0"]}>
+        <div class="flex flex-col lg:flex-row w-full">
           {
             children.map((item: any) => (
               <a
                 href={item.url}
-                class=" px-3 py-1 text-grey  hover:text-white "
+                class=" lg:px-3 py-2 text-grey  hover:text-linaro-yellow cursor-pointer whitespace-nowrap text-sm"
                 target={item.url.startsWith("https") ? "_blank" : "_self"}
               >
                 {item.label}
@@ -41,25 +36,14 @@ const { title, lastItem, children } = Astro.props;
           }
         </div>
       </div>
-    </DropdownItems>
-    <!-- <menu
-      role="menu"
-      data-nav-children={title}
-      class:list={["hidden lg:hidden mt-2 absolute"]}
-    >
-      {
-        children.map((child: any) => (
-          <a
-            href={child.url}
-            class:list={[
-              "lg:px-3 py-2 text-grey  hover:text-linaro-yellow cursor-pointer whitespace-nowrap text-sm",
-            ]}
-            target={child.url.startsWith("https") ? "_blank" : "_self"}
-          >
-            {child.label}
-          </a>
-        ))
-      }
-    </menu> -->
+    </div>
   </menu>
 </li>
+<style lang="scss">
+  .open {
+    margin-bottom: 1rem;
+    button {
+      @apply linaro-gradient-text;
+    }
+  }
+</style>
