--- a/src/components/nav/Dropdown.astro
+++ b/src/components/nav/Dropdown.astro
@@ -2,7 +2,7 @@
 const { title, lastItem, children } = Astro.props;
 ---
 
-<li class="">
+<li class="grow-0">
   <menu
     class:list={["astronav-dropdown group "]}
     aria-expanded="false"
