--- a/src/components/nav/Search/SearchModal.astro
+++ b/src/components/nav/Search/SearchModal.astro
@@ -25,7 +25,7 @@ const { id } = Astro.props;
 
 <button
   id="modal-open-button"
-  class="ml-auto mr-4 float-right"
+  class="ml-auto mr-4 float-right p-2"
   onclick={`window.${id}.showModal()`}><Icon name="search" size={20} /></button
 >
 <div class="relative">
