add search page

--- a/src/components/nav/Dropdown.astro
+++ b/src/components/nav/Dropdown.astro
@@ -40,7 +40,7 @@ const { title, lastItem, children } = Astro.props;
 <style lang="scss">
   .open {
     button {
-      @apply linaro-gradient-text;
+      @apply bg-linaro-gradient bg-clip-text text-transparent;
     }
   }
 </style>
