--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -37,6 +37,6 @@ const optimizedBackground = await getImage({
   .hero-background-image {
     background-image: var(--backgroundUrl);
     background-repeat: no-repeat;
-    @apply bg-[top_right] xl:bg-[top_-1rem_right] bg-[size:100%] lg:bg-[size:50%];
+    @apply bg-[top_right] xl:bg-[top_-1rem_right] bg-[size:100%] lg:bg-[size:50%] pb-[36rem] mb-[-36rem];
   }
 </style>
