--- a/src/components/footer/Footer.astro
+++ b/src/components/footer/Footer.astro
@@ -14,7 +14,7 @@ const path = Astro.url.pathname;
 ---
 
 <footer
-  class="container mx-auto px-8 text-grey text-sm flex flex-col items-center mt-auto"
+  class="container mx-auto px-8 text-grey text-sm flex flex-col items-center mt-auto z-50"
 >
   <div class="fade-border"></div>
   <div
