--- a/src/components/hero/Hero.astro
+++ b/src/components/hero/Hero.astro
@@ -64,8 +64,8 @@ console.log(title);
       />
       {
         button && (
-          <a href={button.url} class="mt-12">
-            <button class="linaro-gradient-button">{button.text}</button>
+          <a href={button.url} class="mt-12 no-underline inline-block">
+            <div class="linaro-gradient-button">{button.text}</div>
           </a>
         )
       }
