--- a/src/components/sections/Buttons.astro
+++ b/src/components/sections/Buttons.astro
@@ -10,8 +10,12 @@ const { buttons } = Astro.props;
   {
     buttons.map(({ text, url, style }) => (
       <li>
-        <a href={url} target={url.startsWith("https") ? "_blank" : "self"}>
-          <button class:list={[style]}>{text}</button>
+        <a
+          href={url}
+          target={url.startsWith("https") ? "_blank" : "_self"}
+          class="no-underline inline-block"
+        >
+          <div class:list={[style]}>{text}</div>
         </a>
       </li>
     ))
