--- a/src/layouts/NewsLayout.astro
+++ b/src/layouts/NewsLayout.astro
@@ -150,6 +150,7 @@ if (related.length > 0) {
   .hero-background-image {
     background-image: var(--backgroundUrl);
     background-repeat: no-repeat;
-    background-position: top right -50%;
+    /* background-position: top right -50%; */
+    @apply bg-center bg-[top_left] lg:bg-[top_right_-50%]  pb-[36rem] mb-[-36rem];
   }
 </style>
