--- a/src/components/article/blog/BlogListing.astro
+++ b/src/components/article/blog/BlogListing.astro
@@ -29,47 +29,49 @@ const content =
 ---
 
 <li
-  class="w-80 border-[0.25px] border-grey rounded-3xl hover:border-transparent hover:linaro-gradient-border cursor-pointer bg-background flex flex-col justify-between"
+  class="w-80 border-[0.25px] border-grey rounded-3xl hover:border-transparent hover:linaro-gradient-border cursor-pointer bg-background f"
 >
   <a
     href={`/${collection === "blogs" ? "blog" : collection}/${slug}`}
-    class="w-full px-4 pt-8 pb-12 inline-block basis-full"
+    class="w-full px-4 pt-8 pb-12 inline-block flex flex-col justify-between h-full"
   >
-    <CloudinaryImg
-      src={blog.image}
-      alt=""
-      width={800}
-      height={800}
-      effects={["grayscale"]}
-      class="w-full h-36 object-cover rounded-lg"
-    />
-    <h2 class="text-2xl my-6">{blog.title}</h2>
-    {
-      author.image && (
-        <CloudinaryImg
-          src={author.image}
-          alt={author.name}
-          width={75}
-          height={75}
-          class="aspect-square object-cover rounded-full my-4"
-        />
-      )
-    }
-    <p class="text-linaro-yellow mt-2">
-      {[author.first_name, author.last_name].join(" ")}
-    </p>
-    <p class="text-neutral-400 mb-2">
-      {dayjs(blog.date).format("dddd, MMMM D, YYYY")}
-    </p>
-    <p>{content}</p>
+    <div class="basis-full">
+      <CloudinaryImg
+        src={blog.image}
+        alt=""
+        width={800}
+        height={800}
+        effects={["grayscale"]}
+        class="w-full h-36 object-cover rounded-lg"
+      />
+      <h2 class="text-2xl my-6">{blog.title}</h2>
+      {
+        author.image && (
+          <CloudinaryImg
+            src={author.image}
+            alt={author.name}
+            width={75}
+            height={75}
+            class="aspect-square object-cover rounded-full my-4"
+          />
+        )
+      }
+      <p class="text-linaro-yellow mt-2">
+        {[author.first_name, author.last_name].join(" ")}
+      </p>
+      <p class="text-neutral-400 mb-2">
+        {dayjs(blog.date).format("dddd, MMMM D, YYYY")}
+      </p>
+      <p>{content}</p>
+    </div>
+    <ul class="flex flex-wrap gap-x-4 gap-y-8 justify-self-end mt-8">
+      {
+        tags.map((tag) => (
+          <li>
+            <button class="linaro-gradient-button">{tag.data.name}</button>
+          </li>
+        ))
+      }
+    </ul>
   </a>
-  <ul class="flex flex-wrap gap-x-4 gap-y-8 px-4 py-8 justify-self-end">
-    {
-      tags.map((tag) => (
-        <li>
-          <button class="linaro-gradient-button">{tag.data.name}</button>
-        </li>
-      ))
-    }
-  </ul>
 </li>
