implement sst protected site deployment

--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -1,25 +1,43 @@
 ---
-import type { Code, Debug } from "astro:components";
+import type { CollectionEntry } from "astro:content";
+import { getEntry } from "astro:content";
 import { getCollection } from "astro:content";
-// import "../styles/global.scss";
+
 export async function getStaticPaths() {
   const pages = await getCollection("pages");
-  return pages
-    // .filter((page) => page.id !== "404.md")
-    .map((page) => {
-      return {
-        params: {
-          slug: page.slug || undefined,
-        },
-        props: {
-          page,
-        },
-      };
-    });
+  return (
+    pages
+      // .filter((page) => page.id !== "404.md")
+      .map((page) => {
+        return {
+          params: {
+            slug: page.slug || undefined,
+          },
+          props: {
+            page,
+          },
+        };
+      })
+  );
+}
+type Props = { page: CollectionEntry<"pages"> };
+const { slug } = Astro.params;
+console.log(slug);
+let page;
+console.log(import.meta.env.SSR);
+if (import.meta.env.SSR) {
+  if (!slug) {
+    page = await getEntry("pages", "/");
+  } else {
+    page = await getEntry("pages", slug);
+  }
+} else {
+  page = Astro.props.page;
 }
 
-const { page } = Astro.props;
-const { Content } = await page.render();
+console.log(page);
+
+const { Content } = page ? await page.render() : { Content: "<></>" };
 ---
 
 <Content />
