--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -27,7 +27,7 @@ const optimizedBackground = await getImage({
     class="hero-background-image container mx-auto px-2 sm:px-4 md:px-8 z-0"
   >
     <h1 class="text-5xl my-12 font-bold">Blog</h1>
-    <BlogSearch client:only="solid-js" tags={tags} type="blogs" />
+    <BlogSearch client:only="solid-js" tags={tags} type="blogs" isSsr={import.meta.env.SSR} />
   </main>
 </BaseLayout>
 <style
