--- a/src/components/hero/Hero.astro
+++ b/src/components/hero/Hero.astro
@@ -27,7 +27,7 @@ console.log(title);
 <section
   class:list={[
     // style,
-    `relative text-white h-[calc(100vh)] min-h-[600px] max-h-[1200px] w-full max-w-screen overflow-hidden`,
+    `relative text-white h-[calc(100vh)] min-h-[600px] max-h-[1200px] w-full max-w-screen overflow-hidden`, styles?.image_size
   ]}
 >
   <div
