--- a/src/layouts/Flow.astro
+++ b/src/layouts/Flow.astro
@@ -38,7 +38,7 @@ for (const sectionData of await getEntries(flow.map((row) => row.sections!.map((
 
 <BaseLayout title={title} description={description}>
     <main 
-      class="prose mx-0 max-w-full prose-invert" 
+      class="prose mx-0 max-w-full prose-invert prose-a:break-all " 
       data-pagefind-body
       data-pagefind-filter="type:page"
     >
