--- a/src/components/sections/Graphic.astro
+++ b/src/components/sections/Graphic.astro
@@ -4,14 +4,25 @@ import type { z } from "astro/zod";
 import CloudinaryImg from "../cloudinary/CloudinaryImg.astro";
 
 type Props = z.infer<typeof graphicSchema>;
-const { src, alt, accessible_version, width, height, mobile_src } = Astro.props;
+const { src, alt, accessible_version, width, height, mobile } = Astro.props;
 ---
 
 <div>
   <!-- Hidden on medium screens and larger, visible on small screens -->
-  <CloudinaryImg src={mobile_src} alt={alt} width={width} height={height} class="md:hidden" />
+  <CloudinaryImg
+    src={mobile.src}
+    alt={alt}
+    width={mobile.width}
+    height={mobile.height}
+    class="lg:hidden"
+  />
   <!-- Visible on medium screens and larger, hidden on small screens -->
-  <CloudinaryImg src={src} alt={alt} width={width} height={height} class="hidden md:block" />
+  <CloudinaryImg
+    src={src}
+    alt={alt}
+    width={width}
+    height={height}
+    class="hidden lg:block"
+  />
   <div set:html={accessible_version} class="sr-only" />
 </div>
-
