--- a/src/components/head/BaseHead.astro
+++ b/src/components/head/BaseHead.astro
@@ -14,12 +14,18 @@ const social_image = "";
 
 <head>
   <title>{title}</title>
-  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <meta property="description" content={description} />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta charset="utf-8" />
   <!-- <Cookies />
   <GoogleAnalytics id={GA_ID} /> -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+  <meta name="msapplication-TileColor" content="#da532c" />
+  <meta name="theme-color" content="#ffffff" />
   <SEO
     title={title}
     description={description}
