--- a/src/components/sections/Carousel.astro
+++ b/src/components/sections/Carousel.astro
@@ -8,7 +8,7 @@ const { images } = Astro.props;
   class="w-full inline-flex flex-nowrap [mask-image:_linear-gradient(to_right,transparent_0,_black_128px,_black_calc(100%-200px),transparent_100%)] overflow-hidden mt-4 mb-8"
 >
   <ul
-    class="flex items-center justify-center md:justify-start [&_li]:mx-8 [&_img]:max-w-none animate-infinite-scroll not-prose"
+    class="flex items-center justify-center md:justify-start [&_li]:mx-8 [&_img]:max-w-none animate-infinite-scroll not-prose max-w-max"
   >
     {
       images.map(({ src, alt }: { src: string; alt: string }) => (
@@ -25,7 +25,7 @@ const { images } = Astro.props;
     }
   </ul>
   <ul
-    class="flex items-center justify-center md:justify-start [&_li]:mx-8 [&_img]:max-w-none animate-infinite-scroll not-prose"
+    class="flex items-center justify-center md:justify-start [&_li]:mx-8 [&_img]:max-w-none animate-infinite-scroll not-prose max-w-max"
     aria-hidden="true"
   >
     {
