--- a/src/components/sections/ImageCards.astro
+++ b/src/components/sections/ImageCards.astro
@@ -18,13 +18,16 @@ const { cards, styles } = Astro.props;
             <CloudinaryImg
               src={image.src}
               alt={image.alt}
-              width={500}
-              height={500}
+              width={image.width}
+              height={image.height}
               class:list={[styles?.image]}
             />
           )}
           <h3 class:list={[styles?.card_title]}>{title}</h3>
-          <div class:list={["text-xl", style]} set:html={content} />
+          {text && (
+            <div class:list={["text-xl z-20", style]} set:html={content} />
+          )}
+
           {button && (
             <a
               href={button.url}
