--- a/src/layouts/Flow.astro
+++ b/src/layouts/Flow.astro
@@ -15,7 +15,6 @@ const {
 const page = await getEntryBySlug("pages", slug)
 
 const { title, description, flow, hero } = page.data
-console.log(title)
 const allComponents = import.meta.glob("../components/{sections,rows}/*.astro") as Record<string, () => Promise<{default: AstroComponentFactory}>>
 const rowComponents = {} as Record<string, {default: AstroComponentFactory} >;
 const sectionComponents = {} as Record<
@@ -25,11 +24,14 @@ const sectionComponents = {} as Record<
 
 
 if (flow && flow?.length > 0) {
-  for (const rowData of await getEntries(flow.map((row) => row.row) as {collection: "rows", slug: CollectionEntry<"rows">["slug"]}[])) {
+  console.log(flow.map((row) => row.row))
+
+  for (const rowData of await getEntries(flow.map((row: any) => row.row) as {collection: "rows", slug: CollectionEntry<"rows">["slug"]}[])) {
+    console.log(rowData)
     rowComponents[rowData.slug] = await allComponents[rowData.data.path.replace("@/components", "../components")]() as {default: AstroComponentFactory}
   }
 
-for (const sectionData of await getEntries(flow.map((row) => row.sections!.map((section) => section.component)).flat() as {collection: "sections", slug: CollectionEntry<"sections">["slug"]}[]) ) {
+for (const sectionData of await getEntries(flow.map((row: any) => row.sections!.map((section: any) => section.component)).flat() as {collection: "sections", slug: CollectionEntry<"sections">["slug"]}[]) ) {
     sectionComponents[sectionData.slug] = await allComponents[sectionData.data.path.replace("@/components", "../components")]() as {default: AstroComponentFactory}
   }
 }
@@ -38,11 +40,11 @@ for (const sectionData of await getEntries(flow.map((row) => row.sections!.map((
 
 <BaseLayout title={title} description={description}>
     <main 
-      class="prose mx-0 max-w-full prose-invert prose-a:break-all " 
+      class="prose mx-0 max-w-full prose-invert " 
       data-pagefind-body
       data-pagefind-filter="type:page"
     >
-<span  data-pagefind-meta="title" class="hidden">{title}</span>
+      <span  data-pagefind-meta="title" class="hidden">{title}</span>
       {hero && <Hero {...hero} />}
       {
         flow?.map((row: any) => {
