implement contact us modal forms

--- a/src/components/rows/ContainerRow.astro
+++ b/src/components/rows/ContainerRow.astro
@@ -31,7 +31,7 @@ if (background_image) {
     styles?.outer,
   ]}
 >
-  <div class:list={[" container mx-auto px-8"]}>
+  <div class:list={[" container mx-auto px-4 md:px-8"]}>
     <div class="flex items-center">
       {
         title ? (
