--- a/src/components/forms/ContactForm.astro
+++ b/src/components/forms/ContactForm.astro
@@ -1,5 +1,5 @@
 ---
-const { form_id, description } = Astro.props;
+const { form_id, description, modal_id } = Astro.props;
 
 const inputFields = [
   {
@@ -13,9 +13,18 @@ const inputFields = [
 ];
 ---
 
-<div class="bg-black max-w-xl rounded-3xl px-8 py-4 w-full">
-  <form class="flex flex-col items-start gap-8" id="contact-form">
-    <p class="text-3xl font-bold">{description}</p>
+<div class="bg-black lg:min-w-[40rem] max-w-xl rounded-3xl px-8 py-4 w-full">
+  <form
+    class="flex flex-col items-start gap-8"
+    id="contact-form"
+    data-contact-form={form_id}
+    method={modal_id ? "modal" : "get"}
+  >
+    {
+      description && (
+        <p class="text-3xl text-white my-2 font-bold">{description}</p>
+      )
+    }
     <input type="hidden" name="form_id" value={form_id} />
     {
       inputFields.map(({ name, label, type }) => (
@@ -38,100 +47,128 @@ const inputFields = [
       required
       placeholder="How can Linaro help you?"
       class="text-black pl-2 h-12 w-full h-24"></textarea>
-    <label for="agreed" class="text-white"
-      ><input type="checkbox" name="agreed" class="mr-2" required />I’ve read
-      and agreed to Linaro’s <a href="/privacy-policy" class="text-white"
-        >Privacy Policy</a
-      ></label
-    >
-    <button type="submit" class="linaro-gradient-button" id="contact-submit"
-      >Submit</button
-    >
-    <button
-      type="submit"
-      class="linaro-gradient-button flex justify-start items-center gap-2 hidden"
-      id="contact-submitting"
-    >
-      <svg
-        aria-hidden="true"
-        class="w-4 h-4 text-gray-200 animate-spin fill-white"
-        viewBox="0 0 100 101"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
+    <slot />
+    <div>
+      <input
+        type="checkbox"
+        name="agreed"
+        id={modal_id ? `agreed-${modal_id}` : "agreed"}
+        class="mr-2"
+        required
+      />
+      <label for={modal_id ? `agreed-${modal_id}` : "agreed"} class="text-white"
+        >I’ve read and agreed to Linaro’s <a
+          href="/privacy-policy"
+          class="text-white">Privacy Policy</a
+        ></label
       >
-        <path
-          d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z"
-          fill="currentColor"></path>
-        <path
-          d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z"
-          fill="currentFill"></path>
-      </svg>
-      Submitting</button
-    >
-  </form>
-  <p id="contact-feedback" class="text-white"></p>
-</div>
-<script>
-  ["DOMContentLoaded", "astro:after-swap"].forEach((event) => {
-    document.addEventListener(event, addListeners);
-  });
+    </div>
+    <div class="flex gap-8">
+      <button type="submit" class="linaro-gradient-button" id="contact-submit"
+        >Submit</button
+      >
 
-  function addListeners() {
-    const form = document.getElementById("contact-form") as HTMLFormElement;
-    form?.addEventListener("submit", (event) => onSubmit(event, form));
-  }
-
-  function onSubmit(e: SubmitEvent, form: HTMLFormElement) {
-    e.preventDefault();
-
-    const feedback = document.getElementById("contact-feedback");
-    const button = document.getElementById("contact-submit");
-    const loader = document.getElementById("contact-submitting");
-
-    if (!e.target) return;
-
-    const data = new FormData(e.target as HTMLFormElement);
-
-    const payload = [
-      "customfield_13155",
-      "customfield_13156",
-      "email",
-      "customfield_13368",
-      "customfield_13365",
-      "form_id",
-    ].reduce(
-      (obj, key) => ({
-        ...obj,
-        [key]: data.get(key),
-      }),
-      {}
-    );
-
-    button?.classList.add("hidden");
-    loader?.classList.remove("hidden");
-
-    fetch(
-      "https://avqfk3gzg2.execute-api.us-east-1.amazonaws.com/prod/formSubmit",
+      <button
+        type="submit"
+        class="linaro-gradient-button flex justify-start items-center gap-2 hidden"
+        id="contact-submitting"
+      >
+        <svg
+          aria-hidden="true"
+          class="w-4 h-4 text-gray-200 animate-spin fill-white"
+          viewBox="0 0 100 101"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z"
+            fill="currentColor"></path>
+          <path
+            d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z"
+            fill="currentFill"></path>
+        </svg>
+        Submitting</button
+      >
       {
-        method: "POST",
-        body: JSON.stringify(payload),
-        headers: {
-          "X-Api-Key": "ox9fSkYfRK16mxy5Gv6pM121H7iAubAQ6uzsDmoW",
-        },
+        modal_id && (
+          <button
+            class="text-white font-bold"
+            onclick={`window.${modal_id}.close()`}
+          >
+            Close
+          </button>
+        )
       }
-    )
-      .then((response) => response.json())
-      .then((result) => {
-        form.classList.add("hidden");
-        feedback!.innerText = result.message;
-      })
-      .catch(() => {
-        feedback!.innerText =
-          "There was an error during submission. Please try again later.";
-        button?.classList.remove("hidden");
-      })
-      .finally(() => {
-        loader?.classList.add("hidden");
-      });
-  }
+    </div>
+  </form>
+  <div id="contact-feedback" class="hidden">
+    <p id="contact-feedback-text" class="text-white"></p>
+    {
+      modal_id && (
+        <button
+          class="text-white font-bold"
+          onclick={`window.${modal_id}.close()`}
+        >
+          Close
+        </button>
+      )
+    }
+  </div>
+</div>
+
+<script>
+  // ["DOMContentLoaded", "astro:after-swap"].forEach((event) => {
+  //   document.addEventListener(event, addListeners);
+  // });
+
+  // function addListeners() {
+  //   const form = document.getElementById("contact-form") as HTMLFormElement;
+  //   form?.addEventListener("submit", (event) => onSubmit(event, form));
+  // }
+
+  // function onSubmit(e: SubmitEvent, form: HTMLFormElement) {
+  //   e.preventDefault();
+
+  //   const feedback = form.getElementById("contact-feedback");
+  //   const feedbackText = form.getElementById("contact-feedback-text");
+
+  //   const button = form.getElementById("contact-submit");
+  //   const loader = form.getElementById("contact-submitting");
+
+  //   if (!e.target) return;
+
+  //   const data = new FormData(e.target as HTMLFormElement);
+  //   const payload = {} as Record<string, any>;
+
+  //   data.forEach((value, key) => (payload[key] = value));
+
+  //   button?.classList.add("hidden");
+  //   loader?.classList.remove("hidden");
+
+  //   fetch(
+  //     "https://avqfk3gzg2.execute-api.us-east-1.amazonaws.com/prod/formSubmit",
+  //     {
+  //       method: "POST",
+  //       body: JSON.stringify(payload),
+  //       headers: {
+  //         "X-Api-Key": "ox9fSkYfRK16mxy5Gv6pM121H7iAubAQ6uzsDmoW",
+  //       },
+  //     }
+  //   )
+  //     .then((response) => response.json())
+  //     .then((result) => {
+  //       form.classList.add("hidden");
+  //       feedback!.classList.remove("hidden");
+  //       feedbackText!.innerText = result.message;
+  //     })
+  //     .catch(() => {
+  //       feedback!.classList.remove("hidden");
+  //       feedbackText!.innerText =
+  //         "There was an error during submission. Please try again later.";
+  //       button?.classList.remove("hidden");
+  //     })
+  //     .finally(() => {
+  //       loader?.classList.add("hidden");
+  //     });
+  // }
 </script>
